# peat-mesh

./: .goa  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  sbom.yml
deploy/: .dockerignore  Dockerfile
deploy/helm/eche-mesh/: Chart.yaml  values.yaml
deploy/helm/eche-mesh/templates/: _helpers.tpl  role.yaml  rolebinding.yaml  secret.yaml  service-headless.yaml  serviceaccount.yaml  statefulset.yaml
deploy/helm/peat-mesh/: Chart.yaml  values.yaml
deploy/helm/peat-mesh/templates/: _helpers.tpl  role.yaml  rolebinding.yaml  secret.yaml  service-headless.yaml  serviceaccount.yaml  statefulset.yaml
docs/: deployment.md  kubernetes.md  trust-model.md
docs/adr/: 0001-kubernetes-istio-deployment.md  0002-eche-mesh-extraction.md  0002-peat-mesh-extraction.md  0003-peer-discovery-architecture.md  0004-pluggable-transport-abstraction.md  0005-e2e-encryption-key-management.md  0006-membership-certificates-tactical-trust.md  0007-consumer-interface-adapters.md  0008-zarf-uds-integration.md  0009-sdk-integration.md  0010-dht-peer-discovery.md  0011-mesh-gateway-service.md  README.md
examples/: basic_mesh.rs  broker_service.rs  document_sync.rs
scripts/: functional-test-enrollment.sh
src/: config.rs  flat_mesh.rs  geohash.rs  lib.rs  mesh.rs  peer_connector.rs
src/beacon/: broadcaster.rs  config.rs  janitor.rs  mod.rs  observer.rs  storage.rs  types.rs
src/broker/: composite_state.rs  error.rs  mod.rs  ota_routes.rs  routes.rs  server.rs  state.rs  store_adapter.rs  ws.rs
src/discovery/: hybrid.rs  kubernetes.rs  mdns.rs  mod.rs  static_config.rs
src/hierarchy/: dynamic_strategy.rs  hybrid_strategy.rs  mod.rs  static_strategy.rs
src/qos/: audit.rs  bandwidth.rs  deletion.rs  eviction.rs  garbage_collection.rs  lifecycle.rs  mod.rs  preemption.rs  retention.rs  storage.rs  sync_mode.rs
src/routing/: aggregator.rs  mesh_router.rs  mod.rs  packet.rs  router.rs
src/security/: callsign.rs  certificate.rs  device_id.rs  encryption.rs  enrollment.rs  error.rs  formation_key.rs  genesis.rs  keypair.rs  mod.rs
src/storage/: automerge_store.rs  automerge_sync.rs  blob_traits.rs  certificate_store.rs  enrollment_transport.rs  flow_control.rs  geohash_index.rs  iroh_blob_store.rs  json_convert.rs  mesh_sync_transport.rs  mod.rs  negentropy_sync.rs  partition_detection.rs  query.rs  streaming_transfer.rs  sync_channel.rs  sync_errors.rs  sync_forwarding.rs  sync_persistence.rs  sync_transport.rs  traits.rs  ttl.rs  ttl_manager.rs  typed_collection.rs
src/sync/: in_memory.rs  mod.rs  traits.rs  types.rs
src/topology/: autonomous.rs  builder.rs  manager.rs  metrics.rs  mod.rs  partition.rs  selection.rs
src/transport/: btle.rs  bypass.rs  capabilities.rs  health.rs  lite.rs  lite_ota.rs  manager.rs  mod.rs  reconnection.rs
tests/: dual_active_transport_e2e.rs  gc_tombstone_integration.rs  hierarchy_e2e.rs  metrics_integration_test.rs  negentropy_stress_test.rs  partition_integration_test.rs  topology_manager_e2e.rs  transport_failover_chaos_test.rs
